--- a/Matplotlib.ipynb
+++ b/Matplotlib.ipynb
@@ -6,7 +6,7 @@
       "name": "Matplotlib",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPVTygIkwvg5l21zrMEso7c",
+      "authorship_tag": "ABX9TyOAimObdpXltHqsd73HdCYu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -730,6 +730,7 @@
     {
       "cell_type": "code",
       "source": [
+        "# Summary of the dataframe\n",
         "x.info()"
       ],
       "metadata": {
